--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <title>phase_1_project</title>
 </head>
 <body>  
+    <section id="logo">
+        <img src="./logo.png" alt="logopic">
+        <ul id="logolist">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#product">Product</a></li>
+            <Li><a href="#comment">Comment</a></Li>
+        </ul>
+    </section>
     <section id="home">
         <div id="search">
-            <h2>Welcome, <br> Mirobe's online cloth store</h2>
+            <h2>Welcome, <br> One stop online store</h2>
             <p>Give your wadrope a new style</p>
             <label for="category">Choose the cloth category you want:</label>
             <select name="cloth" id="cloth1" >
