--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul id="logolist">
             <li><a href="#home">Home</a></li>
             <li><a href="#product">Product</a></li>
-            <Li><a href="#comment">Comment</a></Li>
+            <Li><a href="#product_review">Comment</a></Li>
         </ul>
     </section>
     <section id="home">
