--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="home">
         <div id="search">
             <h2>Welcome, <br> One stop online store</h2>
-            <p>Give your wadrope a new style</p>
+            <p>Give your home a new style</p>
             <label for="category">Choose the cloth category you want:</label>
             <select name="cloth" id="cloth1" >
                 <option value="" default selected>Select Your category</option>
