--- a/index.html
+++ b/index.html
@@ -35,25 +35,7 @@
     <section id="product">
         <h1 class="heading">Product list</h1>
     <div id="cloth_collection">
-         <!--<div id="cloth">
-           <h3 id="title">images</h3>
-            <img src="./scr/fashio4.jpeg" alt="product image" id="image">
-            <h3>Price: <span id="price">10.5</span></h3>
-            <h3>Description: <span id="description" >vfkfkkdkiejudjfnfjj</span></h3>
-            <h3>Category: <span id="category" >vfkfkkdkiejudjfnfjj</span></h3>
-            <p>Like <span id="like_emoji">&#9829</span> </p>
-            <form action="" >
-                <label for="product_review">Please input your review:<br></label>
-                <textarea name="" id="product_review" cols="30" rows="5" class="text_input"></textarea><br><br>
-                <button type="submit">submit</button>
-            </form>
-            <ul id="review" >
-                <li>home</li>
-                <li>home</li>
-                <li>home</li>
-                <li>home</li>
-            </ul>
-        </div>-->
+       <!--created html goes here-->
     </div>
     
     </section>
