--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="search">
             <h2>Welcome, <br> One stop online store</h2>
             <p>Give your home a new style</p>
-            <label for="category">Choose the category you want:</label>
+            <label for="category">Choose the category you want to view:</label>
             <select name="cloth" id="cloth1" >
                 <option value="" default selected>Select Your category</option>
                 <option value="men's clothing">men's clothing</option>
